--- a/src/components/login.scss
+++ b/src/components/login.scss
@@ -11,19 +11,87 @@
 
             flex:0.5;
             box-sizing: border-box;
-            width:100% ;
             height: 100%;
-            border: 1px solid red;
+            
+
+        }
+
+        .login-form-container{
+            width: 100%;
+            text-align: center;
+            padding-top: 5%;
+
+            h2{
+                font-weight: 800;
+               margin-bottom: 2px;
+            }
+            p{
+               font-size: 14px;
+            }
+            form{
+                width: 50%;
+                margin: auto;
+                display: flex;
+                flex-direction: column;
+                gap:10px;
+
+                input{
+                    padding: 6px;
+                }
+
+                input[type="submit"]{
+                    background-color: rgb(7, 65, 99);
+                    color: white;
+                    cursor: pointer;
+                    border: none;
+                    padding: 6px;
+                    border-radius: 3px;
+                }
+            }
+
+            form + div{
+                width: 50%;
+                margin:10px auto;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-size: 0.9em;
+                
+            }
 
         }
 
         .banner-container{
-            border: 1px solid blue;
-
+           
+            width: 100%;
             img{
                 width: 100%;
                 height: 100%;
             }
         }
+
+        @media only screen and (max-width: 600px) {
+            .login-form-container{
+                flex: 1;
+                width: 100%;
+                text-align: center;
+                flex-grow: 1;
+
+                form + div{
+                    width: 50%;
+                    margin:10px auto;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    font-size: 0.6em;
+                    
+                }
+
+            }
+            .banner-container{
+                display:none;
+            }
+        }
     }
 }
+
