--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -48,3 +48,12 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .left-navbar{
+        flex: 1;
+    }
+    .right-navbar{
+        display:none;
+    }
+}
